--- a/about-me.html
+++ b/about-me.html
@@ -114,15 +114,14 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>Volunteering</h3>
 								<p><em>Illuminati: A Journal of the Creative Arts</em></p>
-								<p>Editorial Assistant & Secretary</p>
+								<p>Editorial Assistant & Secretary (2022–2023)</p>
 								<ul>
 									<p>Developed documentation for meetings and organized bookkeeping.</p>
 									<p>Assisted in editing and formatting student submissions for the publication.</p>
 								</ul>
-								<p>Editor-in-Chief</p>
+								<p>Editor-in-Chief (2023)</p>
 								<ul>
-									<p>Presided over staff meetings, organized special events, and designed advertising for the organization using Canva.</p>
-									<p>Managed a team of student editors in editing and formatting student submissions for a creative arts competition.</p>
+									<p>Presided over staff meetings, organized special events, and designed advertising for the organization using Canva. Managed a team of student editors in editing and formatting student submissions for a creative arts competition.</p>
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -134,7 +133,7 @@
 								<p>Academic Awards</p>
 								<ul>
 									<p>Honorably distinguished Cum Laude—top 17% of the graduating class.</p>
-									<p>Listed on the Miami University Presiden's List every semester since 2021.</p>
+									<p>Listed on the Miami University President's List every semester since 2021.</p>
 								</ul>
 							</article>
 						</div>
