--- a/portfolio.html
+++ b/portfolio.html
@@ -100,6 +100,21 @@
 
 				<!-- Three -->
                 <section id="three">
+                    <h2>Tutoring Documents</h2>
+                    	<div class="row">
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="examples/Tutor Feedback Sample.pdf"/><img src="images/feedback.jpg" class="image fit thumb"/></a>
+								<p>Tutor Feedback Sample</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="examples/How to Cite References Using the Miami Library and Add Special Alignments.pdf"/><img src="images/citing-references.jpg" class="image fit thumb"/></a>
+								<p>How to Cite References Using the Miami Library and Add Special Alignments</p>
+							</article>
+						</div>
+                </section>
+
+				<!-- Four -->
+                <section id="four">
                     <h2>Short Stories</h2>
                     	<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
@@ -113,8 +128,8 @@
 						</div>
                 </section>
 
-				<!-- Four -->
-                <section id="four">
+				<!-- Five -->
+                <section id="five">
                     <h2>Editing Work</h2>
                     	<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
@@ -128,8 +143,8 @@
 						</div>
                 </section>
 
-				<!-- Five -->
-                <section id="five">
+				<!-- Six -->
+                <section id="six">
                     <h2>Academic Work</h2>
 					<p>The following examples were created during my time as a student at Miami University. You will find research analyses, technical reporting, and personal reflections. Every example listed here has a special place in my heart and showcases my writing talents.</p>
                     	<div class="row">
