--- a/about-me.html
+++ b/about-me.html
@@ -141,6 +141,24 @@
 
 				<!-- Three -->
 				<section id="three">
+					<h2>References</h2>
+					<p>The following people can be contacted upon request for information about my work experience. Please use my contact information to reach out to me for their emails or phone numbers.
+						<article>
+						<ul>
+							<h4>Dr. Eric Melbye</h4>
+							<p>Acts as the Faculty Advisor for <em>Illuminati: A Journal of the Creative Arts</em>.</p>
+						</ul>
+						</article>
+						<article>
+						<ul>
+							<h4>Kyle Warren</h4>
+							<p>Works as the Head Writing Coordinator for The Tutoring and Learning Center at Miami University</p>
+						</ul>
+						</article>
+				</section>
+
+				<!-- Four -->
+				<section id="four">
 					<h2>What have I written?</h2>
 					<p>Please take some time to peruse my portfolio. I have written everything from academic papers to creative short stories. I hope you enjoy reading through them!</p>
 						<ul class="actions">
@@ -148,8 +166,8 @@
 						</ul>
 				</section>
 
-				<!-- Four -->
-					<section id="four">
+				<!-- Five -->
+					<section id="five">
 						<h2>Get in touch with me.</h2>
 						<p>I am eager to prove myself professionally as I have academically. Please feel free to contact me using the information below. I hope to contribute to your mission!</p>
 						<div class="row">
