--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
 
 				<!-- One -->
 					<section id="one">
-						<h1>Hello! My name is Dawn Kara Reedy.</h1>
-						<p>The most important thing to know about me is that I am fiercely determined and never give up when challenged. I have an innate fascination with everything and a desire to learn new things while sharpening old skills. My mind is vast in its diversity and near bursting with ideas that make their way into my writing. I am ready to meet your needs, whatever they are, and I look forward to working with you.</p>
+						<h1><strong>Hello! My name is Dawn Kara Reedy.</strong></h1>
 					</section>
 						<header class="major">
 							<h2>Who am I and what do I do?</h2>
