--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dawn Kara Reedy - My Portfolio</title>
+		<title>Dawn Kara Reedy - My Home Page</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,12 +14,12 @@
 					<a href="#" class="image avatar"><img src="images/avatar.jpg"/></a>
 					<h1><strong>My Home Page</strong></h1>
 				</div>
-				<table>
-					<tr>
-						<td><a href="index.html" class="button">My Home Page</a></td>
-					</tr>
+				<table>					
 					<tr>
 						<td><a href="about-me.html" class="button">More About Me</a></td>
+					</tr>
+					<tr>
+						<td><a href="resume.html" class="button">My Résumé</a></td>
 					</tr>
 					<tr>
 						<td><a href="portfolio.html" class="button">My Portfolio</a></td>
