--- a/academic.html
+++ b/academic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dawn Kara Reedy - My Portfolio</title>
+		<title>Dawn Kara Reedy - My Academic Work</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,6 +21,9 @@
 					<tr>
 						<td><a href="about-me.html" class="button">More About Me</a></td>
 					</tr>
+                    <tr>
+						<td><a href="resume.html" class="button">My Résumé</a></td>
+					</tr>
 					<tr>
 						<td><a href="portfolio.html" class="button">My Portfolio</a></td>
 					</tr>
@@ -31,65 +34,39 @@
 			<div id="main">
 
 				<!-- One -->
-					<section id="one">
-						<header class="major">
-							<h2>My work and what I'm proud of.</h2>
-						</header>
-						<p>I've written or worked on many projects over the past few years. My content is ever-evolving, and I am constantly growing as a creator. Let me know if there is something specific you'd like to see from me; I am more than willing to share!</p>
-					</section>
-
-				<!-- Two -->
-					<section id="two">
-						<h2>Published Articles</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="articles.html"/><img src="images/diy-tags.jpg" class="image fit thumb"/></a>
-							</article>
-						</div>
-					</section>
-
-				<!-- Three -->
-                <section id="three">
-                    <h2>Tutoring Documents</h2>
-                    	<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="tutoring.html"/><img src="images/feedback.jpg" class="image fit thumb"/></a>
-							</article>
-						</div>
-                </section>
-
-				<!-- Four -->
-                <section id="four">
-                    <h2>Short Stories</h2>
-                    	<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="short-stories.html"/><img src="images/jingle.jpg" class="image fit thumb"/></a>
-							</article>
-						</div>
-                </section>
-
-				<!-- Five -->
-                <section id="five">
-                    <h2>Editing Work</h2>
-                    	<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<a href="editing.html"/><img src="images/ai-style-sheet.jpg" class="image fit thumb"/></a>
-							</article>
-						</div>
-                </section>
-
-				<!-- Six -->
                 <section id="six">
                     <h2>Academic Work</h2>
-						<div class="row">
+					<p>The following examples were created during my time as a student at Miami University. You will find research analyses, technical reporting, and personal reflections. Every example listed here has a special place in my heart and showcases my writing talents.</p>
+                    	<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="academic.html"/><img src="images/displacement.jpg" class="image fit thumb"/></a>
+								<a href="examples/The Many Faces of Displacement.pdf"/><img src="images/displacement.jpg" class="image fit thumb"/></a>
+								<p>The Many Faces of Displacement</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="examples/Hidden in Plain Sight.pdf"/><img src="images/hidden-plain.jpg" class="image fit thumb"/></a>
+								<p>Hidden in Plain Sight</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="examples/Usability Report.pdf"/><img src="images/usability.jpg" class="image fit thumb"/></a>
+								<p>"How to Add a Plant on Planta" Usability Test - Analysis of Instruction</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="examples/The Empowering Factor of Chastity.pdf"/><img src="images/empowering.jpg" class="image fit thumb"/></a>
+								<p>The Empowering Factor of Chastity in <em>The Book of Margery Kempe</em></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="examples/The Organic Nature of Technology.pdf"/><img src="images/organic-tech.jpg"  class="image fit thumb"/></a>
+								<p>The Organic Nature of Technology: How to [In]Correctly Predict the Future</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="examples/Fear and the Horror Genre.pdf"/><img src="images/horror.jpg" class="image fit thumb"/></a>
+								<p>Fear and the Horror Genre</p>
 							</article>
                     	</div>
                 </section>
 
-				<!-- Seven -->
-                <section id="seven">
+				<!-- Two -->
+                <section id="two">
                     <h2>Get in touch with me.</h2>
 						<p>I am eager to prove myself professionally as I have academically. Please feel free to contact me using the information below. I hope to contribute to your mission!</p>
 						<div class="row">
