--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>My work and what I'm proud of.</h2>
+							<h2>My Work and What I'm Proud Of.</h2>
 						</header>
-						<p>I've written or worked on many projects over the past few years. My content is ever-evolving, and I am constantly growing as a creator. Let me know if there is something specific you'd like to see from me; I am more than willing to share!</p>
+						<p>I've written for and worked on many projects over the past few years. My content is ever-evolving, and I am constantly growing as a creator. Let me know if there is something specific you'd like to see from me; I am more than willing to share!</p>
+						<p>Click on the images below to access my work. Once you're on each page, feel free to click on the images provided to access my work as PDF files.</p>
 					</section>
 
 				<!-- Two -->
@@ -90,7 +91,7 @@
 
 				<!-- Seven -->
                 <section id="seven">
-                    <h2>Get in touch with me.</h2>
+                    <h2>Get in Touch With Me.</h2>
 						<p>I am eager to prove myself professionally as I have academically. Please feel free to contact me using the information below. I hope to contribute to your mission!</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
