--- a/resume.html
+++ b/resume.html
@@ -159,7 +159,7 @@
 
 				<!-- Four -->
 				<section id="four">
-					<h2>What have I written?</h2>
+					<h2>What Have I Written?</h2>
 					<p>Please take some time to peruse my portfolio. I have written everything from academic papers to creative short stories. I hope you enjoy reading through them!</p>
 						<ul class="actions">
 							<li><a href="portfolio.html" class="button">My Portfolio</a></li>
@@ -168,7 +168,7 @@
 
 				<!-- Five -->
 					<section id="five">
-						<h2>Get in touch with me.</h2>
+						<h2>Get in Touch With Me.</h2>
 						<p>I am eager to prove myself professionally as I have academically. Please feel free to contact me using the information below. I hope to contribute to your mission!</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
