--- a/about-me.html
+++ b/about-me.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dawn Kara Reedy - My Portfolio</title>
+		<title>Dawn Kara Reedy - More About Me</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 						<td><a href="index.html" class="button">My Home Page</a></td>
 					</tr>
 					<tr>
-						<td><a href="about-me.html" class="button">More About Me</a></td>
+						<td><a href="resume.html" class="button">My Résumé</a></td>
 					</tr>
 					<tr>
 						<td><a href="portfolio.html" class="button">My Portfolio</a></td>
@@ -32,143 +32,33 @@
 				
 				<!-- One -->
 					<section id="one">
-						<p>The most important thing to know about me is that I am fiercely determined and never give up when challenged. I have an innate fascination with everything and a desire to learn new things while sharpening old skills. My mind is vast in its diversity and near bursting with ideas that make their way into my writing. I am ready to meet your needs, whatever they are, and I look forward to working with you.</p>
+						<h2>Who I Am: A Personal Note</h2>
+						<p>Writing isn't the only thing that preoccupies my mind. As the daughter of two teachers, I learned just how important education is. I inherited a deep appreciation of history from my father and a fascination for disability studies from my mother, who was a special education teacher for over thirty years. My passion for learning doesn't stop with my parents' interests, for I also have a fascination with environmental science, physics, and psychology. My academic pursuits have made their way into my writing, inspiring stories in my mind and on paper.</p>
+						<p>I have a portfolio's worth of story ideas saved away for a rainy day, and now that I have time to myself, I am looking forward to putting my imagination to work. My imagination is my best asset, providing me with a creative savvy that allows me to think of concepts in an abstract way. I have always managed to come up with a way of achieving what I need to in a way that no one else has, but it isn't just my creativity that has given me the chance to succeed. My staunch determination has seen me through this life regardless of any roadblocks that might otherwise halt me. Although some might view my drive as stubbornness, it has provided me with the courage to keep moving forward despite everything in my way.</p>
+						<p>I'm a recent graduate with a fierce need to begin working. I continue to write every day, just as I was taught, but I will require more practice if I am to excel as a writer. I am passionate about the craft and can adapt to any genre or tone. I am not picky when it comes to writing, and I can always find a way to spin a story, edit a piece, or assist in publishing an author's dream work. I can achieve anything when I set my mind to it, and I am confident that I can help others do the same by utilizing what I know best. Give me a chance, and you'll see me fly.</p>
 					</section>
 
 				<!-- Two -->
-					<section id="two">
-						<h2>My Experience</h2>
-						<div class="row">
-							<article class="col-6 col-12-xsmall work-item">
-								<h3>Education</h3>
-								<p>(2019–2023)</p>
-								<p>Miami University, Oxford, OH</p>
-								<p>Bachelor's in English Studies</p>
-								<p><em>GPA: 4.0</em></p>
-								<p>Minor in Data Intelligence through IT</p>
-									<p><em>GPA: 3.52</em></p>
-								<p><em><strong>Overall GPA: 3.68</strong></em></p>
-								<br/>
-								<p>Relevant Courses</p>
-								<ul>
-									<p>Creative Thinking, Reading, and Writing</p>
-									<p>Technical Writing</p>
-									<p>Medical Writing</p>
-									<p>Print & Digital Editing</p>
-									<p>Digital Publishing</p>
-									<p>Database Design & Development</p>
-									<p>Advanced Spreadsheets & Analytics</p>
-								</ul>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<h3>Skills</h3>
-								<p>Microsoft Applications:</p>
-								<ul>
-									<p>Word</p>
-									<p>Excel</p>
-									<p>PowerPoint</p>
-									<p>Access</p>
-								</ul>
-								<p>Google Applications:</p>
-								<ul>
-									<p>Docs</p>
-									<p>Sheets</p>
-									<p>Slides</p>
-									<p>Forms</p>
-								</ul>
-								<p>Other Skills:</p>
-								<ul>
-									<p>WordPress & GitHub</p>
-									<p>HTML, CSS, Markdown</p>
-									<p>MySQL & Tableua</p>
-								</ul>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<h3>Experience</h3>
-								<p>Digital Publishing</p>
-								<ul>
-									<p>Worked as a managing editor for an ePub conversion of a student creative arts journal.</p>
-								</ul>
-								<p>Database Design & Development</p>
-								<ul>
-									<p>Served as project manager during the design and development of a database for an online store using an anonymous contractor's company information for a class assignment.</p>
-								</ul>
-								<p>Technical Writing</p>
-								<ul>
-									<p>Collaborated with a team in drafting instructional material and a usability report for a class project.</p>
-								</ul>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<h3>Employment</h3>
-								<p>Writing Tutor (2022–2023)</p>
-								<p>Tutoring and Learning Center, Miami University</p>
-								<ul>
-									<p>Helped students develop papers and presentations for their classes, working on academic assignments, creative works, scientific and medical reports, and technical documents.</p>
-								</ul>
-								<p>Student Journalist (2022–2023)</p>
-								<p>Miami Regionals <em>The Pulse</em></p>
-								<ul>
-									<p>Interacted with and interviewed community members, reporting on their opinions and events around the Middletown Regionals Campus for a university-wide publication.</p>
-								</ul>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<h3>Volunteering</h3>
-								<p><em>Illuminati: A Journal of the Creative Arts</em></p>
-								<p>Editorial Assistant & Secretary (2022–2023)</p>
-								<ul>
-									<p>Developed documentation for meetings and organized bookkeeping.</p>
-									<p>Assisted in editing and formatting student submissions for the publication.</p>
-								</ul>
-								<p>Editor-in-Chief (2023)</p>
-								<ul>
-									<p>Presided over staff meetings, organized special events, and designed advertising for the organization using Canva. Managed a team of student editors in editing and formatting student submissions for a creative arts competition.</p>
-								</ul>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<h3>Awards</h3>
-								<p>Writing Awards</p>
-								<ul>
-									<p>Malcolm M. Sedam English Scholarship and Writing Award (2021–2022).</p>
-								</ul>
-								<p>Academic Awards</p>
-								<ul>
-									<p>Honorably distinguished Cum Laude—top 17% of the graduating class.</p>
-									<p>Listed on the Miami University President's List every semester since 2021.</p>
-								</ul>
-							</article>
-						</div>
-					</section>
+				<section id="two">
+					<h2>Learn More About Me</h2>
+					<p>I chose to provide an example of my résumé here on my website for any viewer to see what I have achieved academically and professionally. My résumé contains finer details about my accomplishments and provides an overview of my experience.</p>
+						<ul class="actions">
+							<li><a href="resume.html" class="button">My Résumé</a></li>
+						</ul>
+				</section>
 
 				<!-- Three -->
 				<section id="three">
-					<h2>References</h2>
-					<p>The following people can be contacted upon request for information about my work experience. Please use my contact information to reach out to me for their emails or phone numbers.
-						<article>
-						<ul>
-							<h4>Dr. Eric Melbye</h4>
-							<p>Acts as the Faculty Advisor for <em>Illuminati: A Journal of the Creative Arts</em>.</p>
-						</ul>
-						</article>
-						<article>
-						<ul>
-							<h4>Kyle Warren</h4>
-							<p>Works as the Head Writing Coordinator for The Tutoring and Learning Center at Miami University</p>
-						</ul>
-						</article>
-				</section>
-
-				<!-- Four -->
-				<section id="four">
-					<h2>What have I written?</h2>
+					<h2>What Have I Written?</h2>
 					<p>Please take some time to peruse my portfolio. I have written everything from academic papers to creative short stories. I hope you enjoy reading through them!</p>
 						<ul class="actions">
 							<li><a href="portfolio.html" class="button">My Portfolio</a></li>
 						</ul>
 				</section>
 
-				<!-- Five -->
-					<section id="five">
-						<h2>Get in touch with me.</h2>
+				<!-- Four -->
+					<section id="four">
+						<h2>Get in Touch With Me.</h2>
 						<p>I am eager to prove myself professionally as I have academically. Please feel free to contact me using the information below. I hope to contribute to your mission!</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
