--- a/index.html
+++ b/index.html
@@ -32,20 +32,30 @@
 
 				<!-- One -->
 					<section id="one">
-						<h1><strong>Hello! My name is Dawn Kara Reedy.</strong></h1>
+						<h1><strong>Hello! My Name is Dawn Kara Reedy.</strong></h1>
 					</section>
 						<header class="major">
-							<h2>Who am I and what do I do?</h2>
+							<h2>Who Am I and What Do I Do?</h2>
 						</header>
 						<p>I am a writer—plain and simple. No genre is unknown to me, as I am versatile in my knowledge of composition. Learning programming languages is my favored pastime, and I love managing and designing databases for personal and public use. My content is error-free, organized, and exceptionally creative. Hard work comes naturally, and I am determined to prove myself creator.</p>
 						<ul class="actions">
 							<li><a href="about-me.html" class="button">Learn More About Me</a></li>
 						</ul>
 					</section>
-
+					
 				<!-- Two -->
-					<section id="two">
-						<h2>Some of my best work.</h2>
+				<section id="two">
+						<h2>Some of the Finer Details</h2>
+					</header>
+					<p>For more direct information about my education and experience, please navigate to my résumé page.</p>
+					<ul class="actions">
+						<li><a href="resume.html" class="button">My Résumé</a></li>
+					</ul>
+				</section>
+
+				<!-- Three -->
+					<section id="three">
+						<h2>Some of My Best Work.</h2>
 						<p>Click on the pictures to access PDFs of my examples.</p>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
@@ -84,9 +94,9 @@
 						</ul>
 					</section>
 
-				<!-- Three -->
-					<section id="three">
-						<h2>Get in touch with me.</h2>
+				<!-- Four -->
+					<section id="four">
+						<h2>Get in Touch With Me.</h2>
 						<p>I am eager to prove myself professionally as I have academically. Please feel free to contact me using the information below. I hope to contribute to your mission!</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
