--- a/resume.html
+++ b/resume.html
@@ -142,17 +142,17 @@
 				<!-- Three -->
 				<section id="three">
 					<h2>References</h2>
-					<p>The following people can be contacted upon request for information about my work experience. Please use my contact information to reach out to me for their emails or phone numbers.
+					<p>Contact information and letters of recommendation available upon request.</p>
 						<article>
 						<ul>
 							<h4>Dr. Eric Melbye</h4>
-							<p>Acts as the Faculty Advisor for <em>Illuminati: A Journal of the Creative Arts</em>.</p>
+							<p>Associate Professor of Engish and Literatures, Languages, and Writing at Miami University; faculty advisor of <em>Illuminati: A Journal of the Arts</em>.</p>
 						</ul>
 						</article>
 						<article>
 						<ul>
 							<h4>Kyle Warren</h4>
-							<p>Works as the Head Writing Coordinator for The Tutoring and Learning Center at Miami University</p>
+							<p>Regional Writing Specialist at The Tutoring and Learning Center at Miami University; faculty advisor of <em>The Pulse Student Newspaper</em>.</p>
 						</ul>
 						</article>
 				</section>
