--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 						<td><a href="about-me.html" class="button">More About Me</a></td>
 					</tr>
 					<tr>
-						<td><a href="portfolio.html" class="button">My Portfolio</a></td>
+						<td><a href="resume.html" class="button">My Résumé</a></td>
 					</tr>
 				</table>
 			</header>
