--- a/about-me.html
+++ b/about-me.html
@@ -33,15 +33,15 @@
 				<!-- One -->
 					<section id="one">
 						<h2>Who I Am: A Personal Note</h2>
-						<p>Writing isn't the only thing that preoccupies my mind. As the daughter of two teachers, I learned just how important education is. I inherited a deep appreciation of history from my father and a fascination for disability studies from my mother, who was a special education teacher for over thirty years. My passion for learning doesn't stop with my parents' interests, for I also have a fascination with environmental science, physics, and psychology. My academic pursuits have made their way into my writing, inspiring stories in my mind and on paper.</p>
-						<p>I have a portfolio's worth of story ideas saved away for a rainy day, and now that I have time to myself, I am looking forward to putting my imagination to work. My imagination is my best asset, providing me with a creative savvy that allows me to think of concepts in an abstract way. I have always managed to come up with a way of achieving what I need to in a way that no one else has, but it isn't just my creativity that has given me the chance to succeed. My staunch determination has seen me through this life regardless of any roadblocks that might otherwise halt me. Although some might view my drive as stubbornness, it has provided me with the courage to keep moving forward despite everything in my way.</p>
-						<p>I'm a recent graduate with a fierce need to begin working. I continue to write every day, just as I was taught, but I will require more practice if I am to excel as a writer. I am passionate about the craft and can adapt to any genre or tone. I am not picky when it comes to writing, and I can always find a way to spin a story, edit a piece, or assist in publishing an author's dream work. I can achieve anything when I set my mind to it, and I am confident that I can help others do the same by utilizing what I know best. Give me a chance, and you'll see me fly.</p>
+						<p>Writing is one of many things that preoccupies my mind and time. As the daughter of two teachers, I learned just how important education is. I inherited a deep appreciation of history from my father and a fascination for disability studies from my mother, who worked as a special education teacher for over thirty years. My passion for learning doesn't stop with my parents' interests; I am also fascinated by environmental science, medical studies, and psychology. My academic pursuits have made their way into my writing, inspiring stories in my mind and on paper.</p>
+						<p>I have a portfolio of story ideas saved for a rainy day, and now that I have time to myself, I am looking forward to working. My imagination is my best asset, providing me with a creative savvy that helps me think through challenges in an abstract way. I have always come up with a way to achieve what I need in a way that no one else has, but it isn't just my creativity that has provided what I need to succeed. My staunch determination has seen me through life, regardless of any roadblocks that might otherwise have halted me. Although some might view my drive as stubbornness, it has given me the courage to keep moving forward despite everything in my way.</p>
+						<p>I'm a recent graduate with a fierce need to begin working. I continue to write daily, just as I was taught, but I will require more practice to excel as a writer. I am passionate about the craft and can adapt to any genre or tone. I am not picky when it comes to writing, and I can always find a way to spin a story, edit a piece, or assist in publishing an author's dream work. I can achieve anything when I set my mind to it, and I am confident that I can help others do the same by utilizing what I know best. Give me a chance, and you'll see me fly.</p>
 					</section>
 
 				<!-- Two -->
 				<section id="two">
 					<h2>Learn More About Me</h2>
-					<p>I chose to provide an example of my résumé here on my website for any viewer to see what I have achieved academically and professionally. My résumé contains finer details about my accomplishments and provides an overview of my experience.</p>
+					<p>My résumé provides further details about my professional and academic experience.</p>
 						<ul class="actions">
 							<li><a href="resume.html" class="button">My Résumé</a></li>
 						</ul>
@@ -50,7 +50,7 @@
 				<!-- Three -->
 				<section id="three">
 					<h2>What Have I Written?</h2>
-					<p>Please take some time to peruse my portfolio. I have written everything from academic papers to creative short stories. I hope you enjoy reading through them!</p>
+					<p>My portfolio showcases examples of my work as a writer and editor.</p>
 						<ul class="actions">
 							<li><a href="portfolio.html" class="button">My Portfolio</a></li>
 						</ul>
