--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
 				
 				<!-- One -->
 					<section id="one">
-						<p>This page houses my personal résumé and showcases my educational and professional achievements. To see direct examples of my work, please navigate to my portfolio. If you have any questions about my experience, then feel free to contact me using the information at the end of each page.</p>
+						<p>This page houses my résumé,  displaying my educational and professional achievements. If you have any questions about my experience, don't hesitate to contact me using the information at the end of each page.</p>
 					</section>
 
 				<!-- Two -->
@@ -76,7 +76,7 @@
 									<p>Slides</p>
 									<p>Forms</p>
 								</ul>
-								<p>Other Skills:</p>
+								<p>Software Development:</p>
 								<ul>
 									<p>WordPress & GitHub</p>
 									<p>HTML, CSS, Markdown</p>
@@ -87,11 +87,11 @@
 								<h3>Experience</h3>
 								<p>Digital Publishing</p>
 								<ul>
-									<p>Worked as a managing editor for an ePub conversion of a student creative arts journal.</p>
+									<p>Worked as a managing editor during an ePub conversion of a student creative arts journal.</p>
 								</ul>
 								<p>Database Design & Development</p>
 								<ul>
-									<p>Served as project manager during the design and development of a database for an online store using an anonymous contractor's company information for a class assignment.</p>
+									<p>Served as project manager during the design and development of an online store database for a class assignment.</p>
 								</ul>
 								<p>Technical Writing</p>
 								<ul>
@@ -103,12 +103,12 @@
 								<p>Writing Tutor (2022–2023)</p>
 								<p>Tutoring and Learning Center, Miami University</p>
 								<ul>
-									<p>Helped students develop papers and presentations for their classes, working on academic assignments, creative works, scientific and medical reports, and technical documents.</p>
+									<p>Helped students develop papers and presentations for classes, working on academic, creative, technical, and scientific documents.</p>
 								</ul>
 								<p>Student Journalist (2022–2023)</p>
 								<p>Miami Regionals <em>The Pulse</em></p>
 								<ul>
-									<p>Interacted with and interviewed community members, reporting on their opinions and events around the Middletown Regionals Campus for a university-wide publication.</p>
+									<p>Interacted with community members, reporting on opinions and events around the Miami Middletown Regional Campus for a news publication.</p>
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -116,12 +116,11 @@
 								<p><em>Illuminati: A Journal of the Creative Arts</em></p>
 								<p>Editorial Assistant & Secretary (2022–2023)</p>
 								<ul>
-									<p>Developed documentation for meetings and organized bookkeeping.</p>
-									<p>Assisted in editing and formatting student submissions for the publication.</p>
+									<p>Assisted with the development of the journal publication and maintaining meeting documentation.</p>
 								</ul>
 								<p>Editor-in-Chief (2023)</p>
 								<ul>
-									<p>Presided over staff meetings, organized special events, and designed advertising for the organization using Canva. Managed a team of student editors in editing and formatting student submissions for a creative arts competition.</p>
+									<p>Presided over staff meetings, organized events, helped design advertising using Canva, and managed student editors during a creative arts competition.</p>
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -160,7 +159,7 @@
 				<!-- Four -->
 				<section id="four">
 					<h2>What Have I Written?</h2>
-					<p>Please take some time to peruse my portfolio. I have written everything from academic papers to creative short stories. I hope you enjoy reading through them!</p>
+					<p>My portfolio showcases examples of what I've written and edited.</p>
 						<ul class="actions">
 							<li><a href="portfolio.html" class="button">My Portfolio</a></li>
 						</ul>
