--- a/resume.html
+++ b/resume.html
@@ -159,7 +159,7 @@
 				<!-- Four -->
 				<section id="four">
 					<h2>What Have I Written?</h2>
-					<p>My portfolio showcases examples of what I've written and edited.</p>
+					<p>My portfolio showcases examples of my work as a writer and editor.</p>
 						<ul class="actions">
 							<li><a href="portfolio.html" class="button">My Portfolio</a></li>
 						</ul>
