--- a/portfolio.html
+++ b/portfolio.html
@@ -35,8 +35,8 @@
 						<header class="major">
 							<h2>My Work and What I'm Proud Of.</h2>
 						</header>
-						<p>I've written for and worked on many projects over the past few years. My content is ever-evolving, and I am constantly growing as a creator. Let me know if there is something specific you'd like to see from me; I am more than willing to share!</p>
-						<p>Click on the images below to access my work. Once you're on each page, feel free to click on the images provided to access my work as PDF files.</p>
+						<p>My content is constantly evolving and growing to incorporate intertextuality. Please get in touch with me if you would like to see something a little more specific.</p>
+						<p>Click on the images below to access different types of my work.</p>
 					</section>
 
 				<!-- Two -->
