--- a/academic.html
+++ b/academic.html
@@ -16,15 +16,6 @@
 				</div>
 				<table>
 					<tr>
-						<td><a href="index.html" class="button">My Home Page</a></td>
-					</tr>
-					<tr>
-						<td><a href="about-me.html" class="button">More About Me</a></td>
-					</tr>
-                    <tr>
-						<td><a href="resume.html" class="button">My Résumé</a></td>
-					</tr>
-					<tr>
 						<td><a href="portfolio.html" class="button">My Portfolio</a></td>
 					</tr>
 				</table>
@@ -36,7 +27,8 @@
 				<!-- One -->
                 <section id="six">
                     <h2>Academic Work</h2>
-					<p>The following examples were created during my time as a student at Miami University. You will find research analyses, technical reporting, and personal reflections. Every example listed here has a special place in my heart and showcases my writing talents.</p>
+					<p>The following examples were drafted during my time as a student at Miami University. You will find research analyses, technical reporting, and personal reflections. Every example listed showcases my diverse writing talents.</p>
+					<p>Click on the images below to access different types of my work.</p>
                     	<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="examples/The Many Faces of Displacement.pdf"/><img src="images/displacement.jpg" class="image fit thumb"/></a>
