--- a/tutoring.html
+++ b/tutoring.html
@@ -16,15 +16,6 @@
 				</div>
 				<table>
 					<tr>
-						<td><a href="index.html" class="button">My Home Page</a></td>
-					</tr>
-					<tr>
-						<td><a href="about-me.html" class="button">More About Me</a></td>
-					</tr>                    
-					<tr>
-						<td><a href="resume.html" class="button">My Résumé</a></td>
-					</tr>
-					<tr>
 						<td><a href="portfolio.html" class="button">My Portfolio</a></td>
 					</tr>
 				</table>
@@ -36,6 +27,7 @@
 				<!-- One -->
                 <section id="three">
                     <h2>Tutoring Documents</h2>
+					<p>Click on the images below to access different types of my work.</p>
                     	<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="examples/Tutor Feedback Sample.pdf"/><img src="images/feedback.jpg" class="image fit thumb"/></a>
