--- a/tutoring.html
+++ b/tutoring.html
@@ -34,8 +34,8 @@
 								<p>Tutor Feedback Sample</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="examples/How to Cite References Using the Miami Library and Add Special Alignments.pdf"/><img src="images/citing-references.jpg" class="image fit thumb"/></a>
-								<p>How to Cite References Using the Miami Library and Add Special Alignments</p>
+								<a href="examples/How to Cite References Using the Miami Library and Adding Special Alignments Using Google Docs.pdf"/><img src="images/citing-references.jpg" class="image fit thumb"/></a>
+								<p>How to Cite References Using the Miami Library and Adding Special Alignments Using Google Docs</p>
 							</article>
 						</div>
                 </section>
