Major Update to Portfolio
Altering tutor section to incorporate technical writing

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,10 +51,10 @@
 
 				<!-- Three -->
                 <section id="three">
-                    <h2>Tutoring Documents</h2>
+                    <h2>Technical Documents</h2>
                     	<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="tutoring.html"/><img src="images/feedback.jpg" class="image fit thumb"/></a>
+								<a href="technical.html"/><img src="images/feedback.jpg" class="image fit thumb"/></a>
 							</article>
 						</div>
                 </section>
