--- a/technical.html
+++ b/technical.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dawn Kara Reedy - My Tutoring Documents</title>
+		<title>Dawn Kara Reedy - My Technical Documents</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,7 +26,7 @@
 
 				<!-- One -->
                 <section id="three">
-                    <h2>Tutoring Documents</h2>
+                    <h2>Technical Documents</h2>
 					<p>Click on the images below to access different types of my work.</p>
                     	<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
@@ -36,6 +36,14 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="examples/How to Cite References Using the Miami Library and Adding Special Alignments Using Google Docs.pdf"/><img src="images/citing-references.jpg" class="image fit thumb"/></a>
 								<p>How to Cite References Using the Miami Library and Adding Special Alignments Using Google Docs</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="examples/Planta Instruction Writing.pdf"/><img src="images/usability.jpg" class="image fit thumb"/></a>
+								<p>Planta Instruction Writing</p>
+							</article>							
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="examples/Usability Report.pdf"/><img src="images/usability.jpg" class="image fit thumb"/></a>
+								<p>"How to Add a Plant on Planta" Usability Test - Analysis of Instructions</p>
 							</article>
 						</div>
                 </section>
