--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg"/></a>
+					<a href="index.html" class="image avatar"><img src="images/avatar.jpg"/></a>
 					<h1><strong>My Résumé</strong></h1>
 				</div>
 				<table>
@@ -144,16 +144,22 @@
 					<p>Contact information and letters of recommendation available upon request.</p>
 						<article>
 						<ul>
-							<h4>Dr. Eric Melbye</h4>
-							<p>Associate Professor of Engish and Literatures, Languages, and Writing at Miami University; faculty advisor of <em>Illuminati: A Journal of the Arts</em>.</p>
-						</ul>
-						</article>
-						<article>
-						<ul>
 							<h4>Kyle Warren</h4>
 							<p>Regional Writing Specialist at The Tutoring and Learning Center at Miami University; faculty advisor of <em>The Pulse Student Newspaper</em>.</p>
 						</ul>
 						</article>
+						<article>
+						<ul>
+							<h4>Dr. Eric Melbye</h4>
+							<p>Associate Professor of Engish and Literatures, Languages, and Writing at Miami University; faculty advisor of <em>Illuminati: A Journal of the Arts</em>.</p>
+						</ul>
+						</article>					
+						<artilcle>
+						<ul>
+							<h4>Dr. Kelli Johnson</h4>
+							<p>Associate Professor of English at Miami University; Affiliated with Justice and Community Studies and Women's and Gender Studies.</p>
+						</ul>
+						</artilcle>
 				</section>
 
 				<!-- Four -->
