--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg"/></a>
+					<a href="index.html" class="image avatar"><img src="images/avatar.jpg"/></a>
 					<h1><strong>My Home Page</strong></h1>
 				</div>
 				<table>					
