--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
 				</div>
 				<table>					
 					<tr>
-						<td><a href="about-me.html" class="button">More About Me</a></td>
-					</tr>
-					<tr>
 						<td><a href="resume.html" class="button">My Résumé</a></td>
 					</tr>
 					<tr>
@@ -35,25 +32,16 @@
 						<h1><strong>Hello! My Name is Dawn Kara Reedy.</strong></h1>
 					</section>
 						<header class="major">
-							<h2>Who Am I and What Do I Do?</h2>
+							<h2>But you can call me Kara!</h2>
 						</header>
-						<p>I am a writer—plain and simple. No genre is unknown to me, as I am versatile in my knowledge of composition. Learning programming languages is my favored pastime, and I love managing and designing databases for personal and public use. My content is error-free, organized, and exceptionally creative. Hard work comes naturally, and I am determined to prove myself as a creator.</p>
+						<p>I'm a content developer with a passion for writing and technology. As a recent graduate, I am determined to find work that makes an impact while using what I've learned. I'm prepared to jump in and adapt to any work environment. Whether working independently or on a team, I am ready to make a difference!</p>
+						<p>Please click the button below to learn more about my experience and accomplishments.</p>
 						<ul class="actions">
-							<li><a href="about-me.html" class="button">Learn More About Me</a></li>
+							<li><a href="resume.html" class="button">My Resume</a></li>
 						</ul>
 					</section>
 					
 				<!-- Two -->
-				<section id="two">
-						<h2>Some of the Finer Details</h2>
-					</header>
-					<p>For more direct information about my education and experience, please navigate to my résumé page.</p>
-					<ul class="actions">
-						<li><a href="resume.html" class="button">My Résumé</a></li>
-					</ul>
-				</section>
-
-				<!-- Three -->
 					<section id="three">
 						<h2>Some of My Best Work.</h2>
 						<p>Click on the pictures to access PDFs of my examples.</p>
@@ -97,7 +85,7 @@
 				<!-- Four -->
 					<section id="four">
 						<h2>Get in Touch With Me.</h2>
-						<p>I am eager to prove myself professionally as I have academically. Please feel free to contact me using the information below. I hope to contribute to your mission!</p>
+						<p>Please feel free to contact me using the information below. I hope to contribute to your mission!</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
