--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Dawn Kara Reedy - My Résumé</title>
+		<title>Dawn Kara Reedy - My Resume</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -12,14 +12,11 @@
 			<header id="header">
 				<div class="inner">
 					<a href="index.html" class="image avatar"><img src="images/avatar.jpg"/></a>
-					<h1><strong>My Résumé</strong></h1>
+					<h1><strong>My Resume</strong></h1>
 				</div>
 				<table>
 					<tr>
 						<td><a href="index.html" class="button">My Home Page</a></td>
-					</tr>
-					<tr>
-						<td><a href="about-me.html" class="button">More About Me</a></td>
 					</tr>
 					<tr>
 						<td><a href="portfolio.html" class="button">My Portfolio</a></td>
@@ -32,7 +29,7 @@
 				
 				<!-- One -->
 					<section id="one">
-						<p>This page houses my résumé,  displaying my educational and professional achievements. If you have any questions about my experience, don't hesitate to contact me using the information at the end of each page.</p>
+						<p>This page houses my resume, displaying my educational and professional achievements. If you have any questions about my experience, don't hesitate to contact me using the information at the end of each page.</p>
 					</section>
 
 				<!-- Two -->
@@ -62,6 +59,14 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<h3>Skills</h3>
+								<p>Content Development</p>
+								<ul>
+									<p>Creative Writing</p>
+									<p>Technical Writing</p>
+									<p>Editing</p>
+									<p>Proofreading</p>
+									<p>Digital Publishing</p>
+								</ul>
 								<p>Microsoft Applications:</p>
 								<ul>
 									<p>Word</p>
@@ -79,7 +84,7 @@
 								<p>Software Development:</p>
 								<ul>
 									<p>WordPress & GitHub</p>
-									<p>HTML, CSS, Markdown</p>
+									<p>HTML, CSS, & Markdown</p>
 									<p>MySQL & Tableua</p>
 								</ul>
 							</article>
