Small Update and Image
Slight word update to Index and added resume thumbnail.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				</div>
 				<table>					
 					<tr>
-						<td><a href="resume.html" class="button">My Résumé</a></td>
+						<td><a href="resume.html" class="button">My Resume</a></td>
 					</tr>
 					<tr>
 						<td><a href="portfolio.html" class="button">My Portfolio</a></td>
