--- a/resume.html
+++ b/resume.html
@@ -30,115 +30,14 @@
 				<!-- One -->
 					<section id="one">
 						<p>This page houses my resume, displaying my educational and professional achievements. If you have any questions about my experience, don't hesitate to contact me using the information at the end of each page.</p>
+						<p>You can click the thumbnail below to view a PDF of my resume!</p>
 					</section>
 
 				<!-- Two -->
 					<section id="two">
-						<h2>My Experience</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<h3>Education</h3>
-								<p>(2019–2023)</p>
-								<p>Miami University, Oxford, OH</p>
-								<p>Bachelor's in English Studies</p>
-								<p><em>GPA: 4.0</em></p>
-								<p>Minor in Data Intelligence through IT</p>
-									<p><em>GPA: 3.52</em></p>
-								<p><em><strong>Overall GPA: 3.68</strong></em></p>
-								<br/>
-								<p>Relevant Courses</p>
-								<ul>
-									<p>Creative Thinking, Reading, and Writing</p>
-									<p>Technical Writing</p>
-									<p>Medical Writing</p>
-									<p>Print & Digital Editing</p>
-									<p>Digital Publishing</p>
-									<p>Database Design & Development</p>
-									<p>Advanced Spreadsheets & Analytics</p>
-								</ul>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<h3>Skills</h3>
-								<p>Content Development</p>
-								<ul>
-									<p>Creative Writing</p>
-									<p>Technical Writing</p>
-									<p>Editing</p>
-									<p>Proofreading</p>
-									<p>Digital Publishing</p>
-								</ul>
-								<p>Microsoft Applications:</p>
-								<ul>
-									<p>Word</p>
-									<p>Excel</p>
-									<p>PowerPoint</p>
-									<p>Access</p>
-								</ul>
-								<p>Google Applications:</p>
-								<ul>
-									<p>Docs</p>
-									<p>Sheets</p>
-									<p>Slides</p>
-									<p>Forms</p>
-								</ul>
-								<p>Software Development:</p>
-								<ul>
-									<p>WordPress & GitHub</p>
-									<p>HTML, CSS, & Markdown</p>
-									<p>MySQL & Tableua</p>
-								</ul>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<h3>Experience</h3>
-								<p>Digital Publishing</p>
-								<ul>
-									<p>Worked as a managing editor during an ePub conversion of a student creative arts journal.</p>
-								</ul>
-								<p>Database Design & Development</p>
-								<ul>
-									<p>Served as project manager during the design and development of an online store database for a class assignment.</p>
-								</ul>
-								<p>Technical Writing</p>
-								<ul>
-									<p>Collaborated with a team in drafting instructional material and a usability report for a class project.</p>
-								</ul>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<h3>Employment</h3>
-								<p>Writing Tutor (2022–2023)</p>
-								<p>Tutoring and Learning Center, Miami University</p>
-								<ul>
-									<p>Helped students develop papers and presentations for classes, working on academic, creative, technical, and scientific documents.</p>
-								</ul>
-								<p>Student Journalist (2022–2023)</p>
-								<p>Miami Regionals <em>The Pulse</em></p>
-								<ul>
-									<p>Interacted with community members, reporting on opinions and events around the Miami Middletown Regional Campus for a news publication.</p>
-								</ul>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<h3>Volunteering</h3>
-								<p><em>Illuminati: A Journal of the Creative Arts</em></p>
-								<p>Editorial Assistant & Secretary (2022–2023)</p>
-								<ul>
-									<p>Assisted with the development of the journal publication and maintaining meeting documentation.</p>
-								</ul>
-								<p>Editor-in-Chief (2023)</p>
-								<ul>
-									<p>Presided over staff meetings, organized events, helped design advertising using Canva, and managed student editors during a creative arts competition.</p>
-								</ul>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<h3>Awards</h3>
-								<p>Writing Awards</p>
-								<ul>
-									<p>Malcolm M. Sedam English Scholarship and Writing Award (2021–2022).</p>
-								</ul>
-								<p>Academic Awards</p>
-								<ul>
-									<p>Honorably distinguished Cum Laude—top 17% of the graduating class.</p>
-									<p>Listed on the Miami University President's List every semester since 2021.</p>
-								</ul>
+								<a href="examples/Reedy, Dawn Resume.pdf"/><img src="images/resume.jpg"/></a>
 							</article>
 						</div>
 					</section>
