--- a/portfolio.html
+++ b/portfolio.html
@@ -19,10 +19,7 @@
 						<td><a href="index.html" class="button">My Home Page</a></td>
 					</tr>
 					<tr>
-						<td><a href="about-me.html" class="button">More About Me</a></td>
-					</tr>
-					<tr>
-						<td><a href="resume.html" class="button">My Résumé</a></td>
+						<td><a href="resume.html" class="button">My Resume</a></td>
 					</tr>
 				</table>
 			</header>
@@ -92,7 +89,7 @@
 				<!-- Seven -->
                 <section id="seven">
                     <h2>Get in Touch With Me.</h2>
-						<p>I am eager to prove myself professionally as I have academically. Please feel free to contact me using the information below. I hope to contribute to your mission!</p>
+						<p>Please feel free to contact me using the information below. I hope to contribute to your mission!</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
