--- a/academic.html
+++ b/academic.html
@@ -56,7 +56,7 @@
 				<!-- Two -->
                 <section id="two">
                     <h2>Get in Touch With Me.</h2>
-						<p>I am eager to prove myself professionally as I have academically. Please feel free to contact me using the information below. I hope to contribute to your mission!</p>
+						<p>Please feel free to contact me using the information below. I hope to contribute to your mission!</p>
 						<div class="row">
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
